--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --hostname localhost --port 4000",
     "build": "nuxt build",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxt3": "latest"
+    "node-sass": "^6.0.1",
+    "nuxt3": "latest",
+    "sass": "^1.43.3",
+    "sass-loader": "^12.2.0"
   }
 }
