--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
+    "fibers": "^5.0.0",
     "node-sass": "^6.0.1",
     "nuxt3": "latest",
     "sass": "^1.43.3",
-    "sass-loader": "^12.2.0"
+    "sass-loader": "^10.2.0"
   }
 }
