--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,6 @@
   targetPort = 3000
 
 [build]
-    command = "npm run generate"
+    command = "npm run build"
     publish = "dist"
     functions = ".output/server"
