--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "std-env": "^3.0.1"
   },
   "dependencies": {
-    "follow-redirects": "^1.14.7"
+    "follow-redirects": "^1.14.7",
+    "node-fetch": ">=2.6.7",
+    "glob-parent": ">=5.1.2"
   }
 }
