--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "nuxt-edge": "latest",
     "sass": "^1.43.4",
     "sass-loader": "^10.1.1",
-    "std-env": "^3.0.1"
+    "std-env": "^3.0.1",
+    "glob-parent": "^5.1.2"
   },
   "dependencies": {
     "follow-redirects": "^1.14.7",
